--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doug's Portfolio</title>
+    <title>Douglas Santos</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -84,6 +84,7 @@
                             <img src="img/icon-mysql.png" class="icons">
                             <img src="img/icon-db.png" class="icons">
                             <img src="img/icon-cloud.png" class="icons">
+                            <img src="img/icon-solidity.png" class="icons">
                         </div>
                     </div>
                     <ul class="list-skills">
@@ -95,6 +96,7 @@
                         <li>SQL (MySQL)</li>
                         <li>NoSQL Databases (MongoDB)</li>
                         <li>Google Cloud Services</li>
+                        <li>Solidity</li>
                     </ul>
                 </article>
             </div>
@@ -112,9 +114,16 @@
         <section>
             <div class="container">
                 <div class="sub-header">Projects</div>
-                <article class="article">
+                <article class="article projects">
+                    <div>
+                        <img src="img/restaurant-00.jpg" class="img-project" alt="">
+                        <p class="link-projects">https://github.com/dacsantos/brazilrestaurant.git</p>
+                    </div>
+                    <div>
+                        <img src="img/concurrency-data-manipulation.jpg" class="img-project" alt="">
+                        <p class="link-projects"> https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git</p>
+                    </div>
 
-                    
                 </article>
             </div>
             
