--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="sub-header">Education and skills</div>
                 <article class="article">
                     <a href="https://www.cct.ie/" target="_blank">
-                        <img src="/img/CCT-logo.jpg" loading="lazy" alt="" class="cct-logo" />
+                        <img src="img/CCT-logo.jpg" loading="lazy" alt="" class="cct-logo" />
                     </a>
                     <p class="paragraph">
                         I have started my Bachelor of Science (Honours) in Computing and IT at CCT College in Dublin in
@@ -105,7 +105,7 @@
                         src="img/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
                 <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"><img
                         src="img/icon-linkedin.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="/img/icon-email.png"
+                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="img/icon-email.png"
                         loading="lazy" width="50" alt="" class="image-socials" /></a>
                 <a href="/files/Douglas_Santos_CV.pdf" class="link-social" target="_blank"><img src="img/icon-cv.png"
                         loading="lazy" width="50" alt="" class="image-socials"></a>
