fixed html error

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Douglas Santos</title>
@@ -219,9 +219,7 @@
             <div class="container">
                 <div class="sub-header">Contact</div>
                 <h2>Go ahead, let's connect!</h2>
-                <div class="article">
-                    <img src="img/doug-why.png" class="img-contact" alt="">
-                    <div class="">
+                <div class="article">         
                         <h3>Send me a message...</h3>
 
                         <p class="paragraph"> Job interviews, project enquiries, or just to keep in touch.</p>
@@ -232,7 +230,7 @@
                             <br><input type="text" class="form-input msg-box"name="message" placeholder="Write your message here" required>
                             <button class="button" type="submit">Send</button>
                        </form>
-                    </div>
+                    <img src="img/doug-why.png" class="img-contact" alt="">
                 </div>
             </div>
         </section>
