final project html and css all checked

--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
                         <img src="img/doug-why.png" class="img-contact">
                         <p class="about-text">...about interviews, project enquiries, or just to say 'Hi!' and how much
                             you
-                            enjoy this page. I promise to get back to you as soon as possible (in order of importance)!
+                            enjoyed this page. I promise to get back to you as soon as possible (in order of
+                            importance)!
                         </p>
                     </div>
                 </div>
@@ -237,6 +238,8 @@
         <div class="lighting-right"></div>
         <div class="lighting-left"></div>
         <div class="lighting-middle"></div>
+        <div class="lighting-bottom1"></div>
+        <div class="lighting-bottom2"></div>
     </div>
     <footer id="footer">
         <div class="footer-container"></div>
