--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="body">
+<body class="body-thanks">
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
@@ -49,6 +49,7 @@
         <div class="lighting-right"></div>
         <div class="lighting-left"></div>
         <div class="lighting-middle"></div>
+
     </div>
     <script src="js/script.js" type="text/javascript"></script>
 </body>
