--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                         <p class="title-project"> Mathematical Equations Calculator </p>
                         <div class="project-slideshow">
                             <div class="images-group fade ">
-                                <img src="img/equations-calc.jpg">
-                                <div class="text">Login Page</div>
+                                <img id="main-photo" src="img/equations-calc.jpg">
+                                <div id="main-text" class="text">Login Page</div>
                             </div>
                             <div class="images-group fade">
                                 <img src="img/equations-calc00.jpg" id="calc">
