--- a/thankyou.html
+++ b/thankyou.html
@@ -11,11 +11,12 @@
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="#main" class="brand scroll-link"><img src="img/ds-brand.png" loading="lazy" width="125" /></a>
+                <a href="http://127.0.0.1:5500/index.html" class="brand scroll-link"><img src="img/ds-brand.png"
+                        loading="lazy" width="125" /></a>
                 <nav role="navigation" class="nav-menu">
-                    <a href="http://127.0.0.1:5500/" class="nav-link scroll-link">Education and skills</a>
-                    <a href="index.html#projects-section" class="nav-link scroll-link">projects</a>
-                    <a href="index.html#contact" class="nav-link scroll-link">Contact</a>
+                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">Education and skills</a>
+                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">projects</a>
+                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">Contact</a>
                 </nav>
             </div>
         </section>
@@ -29,10 +30,10 @@
                     <h3 class="item">We will be in touch soon. You can go back to the main page now...</h3>
                 </div>
                 <div>
-                    
+
                 </div>
             </div>
-                        <div class="side-menu">
+            <div class="side-menu">
                 <a href="https://github.com/dacsantos" class="link-social" target="_blank"><img
                         src="img/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
                 <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"><img
