--- a/thankyou.html
+++ b/thankyou.html
@@ -11,8 +11,8 @@
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="http://127.0.0.1:5500/index.html" class="brand scroll-link"><img src="img/ds-brand.png"
-                        loading="lazy" width="125" /></a>
+                <a href="http://127.0.0.1:5500/index.html" class="brand"><img src="img/ds-brand.png" loading="lazy"
+                        width="125" /></a>
                 <nav role="navigation" class="nav-menu">
                     <a href="http://127.0.0.1:5500/index.html" class="nav-link">Education and skills</a>
                     <a href="http://127.0.0.1:5500/index.html" class="nav-link">projects</a>
