--- a/index0.html
+++ b/index0.html
@@ -1,22 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Douglas Santos </title>
-    <meta name="description" content="My Portfolio">
-    <meta name="keywords" content="My Portfolio">
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Douglas Santos</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="body">
     <div class="page-content-wrapper">
-        <!-- Main section (1) -->
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="#main" class="brand scroll-link"><img src="ds-brand.png" loading="lazy" width="125" alt=""></a>
+                <a href="#main" class="brand scroll-link"><img src="img/ds-brand.png" loading="lazy" width="125" /></a>
                 <nav role="navigation" class="nav-menu">
                     <a href="#education-section" class="nav-link scroll-link">Education and skills</a>
-                    <a href="#projects-section" class="nav-link scroll-link">Projects</a>
+                    <a href="#projects-section" class="nav-link scroll-link">projects</a>
                     <a href="#contact" class="nav-link scroll-link">Contact</a>
                 </nav>
             </div>
@@ -28,8 +26,8 @@
                             databases, and new technologies.</p>
                     </div>
                     <div class="image-wrap">
-                        <img src="doug-main-00.png" loading="lazy" class="image-main" />
-                        <img src="doug-hover-00.png" loading="lazy" class="image-back" />
+                        <img src="img/doug-main-00.png" loading="lazy" alt="" class="image-main" />
+                        <img src="img/doug-hover-00.png" loading="lazy" alt="" class="image-back" />
                     </div>
                 </div>
                 <div class="content-wrap-about">
@@ -54,14 +52,13 @@
                 </div>
             </div>
         </section>
-        <!-- Education and Skills (2) -->
         <section class="education-skills-section" id="education-section">
             <div class="container">
                 <div class="sub-header">Education and skills</div>
                 <h2>A wild journey of learning and struggle</h2>
                 <article class="article">
                     <a href="https://www.cct.ie/" target="_blank">
-                        <img src="CCT-logo.jpg" loading="lazy" class="bright-img" alt="">
+                        <img src="img/CCT-logo.jpg" loading="lazy" alt="" class="bright-img" />
                     </a>
                     <p class="paragraph">
                         I have started my Bachelor of Science (Honours) in Computing and IT at CCT College in Dublin in
@@ -77,19 +74,19 @@
                     </p>
                     <div class="icon-group">
                         <div class="icon-container">
-                            <img src="icons/icon-java.png" class="icons">
-                            <img src="icons/icon-js.png" class="icons">
-                            <img src="icons/icon-html.png" class="icons">
-                            <img src="icons/icon-css.png" class="icons">
-                            <img src="icons/icon-linux.png" alt="">
+                            <img src="img/icon-java.png" class="icons">
+                            <img src="img/icon-js.png" class="icons">
+                            <img src="img/icon-html.png" class="icons">
+                            <img src="img/icon-css.png" class="icons">
+                            <img src="img/icon-linux.png" class="icons">
                         </div>
                         <br><br>
                         <div class="icon-container">
-                            <img src="icons/icon-git.png" class="icons">
-                            <img src="icons/icon-mysql.png" class="icons">
-                            <img src="icons/icon-db.png" class="icons">
-                            <img src="icons/icon-cloud.png" class="icons">
-                            <img src="icons/icon-solidity.png" class="icons">
+                            <img src="img/icon-git.png" class="icons">
+                            <img src="img/icon-mysql.png" class="icons">
+                            <img src="img/icon-db.png" class="icons">
+                            <img src="img/icon-cloud.png" class="icons">
+                            <img src="img/icon-solidity.png" class="icons">
                         </div>
                     </div>
                     <ul class="list-skills">
@@ -106,35 +103,29 @@
                 </article>
             </div>
             <div class="side-menu">
-                <a href="https://github.com/dacsantos" class="link-social" target="_blank">
-                    <img src="icons/icon-github.png" loading="lazy" width="50" class="image-socials">
-                </a>
-                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank">
-                    <img src="icons/icon-linkedin.png" loading="lazy" width="50" class="image-socials">
-                </a>
-                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank">
-                    <img src="icons/icon-email.png" loading="lazy" width="50" class="image-socials">
-                </a>
-                <a href="Douglas_Santos_CV.pdf" class="link-social" target="_blank">
-                    <img src="icons/icon-cv.png" loading="lazy" width="50" class="image-socials">
-                </a>
+                <a href="https://github.com/dacsantos" class="link-social" target="_blank"><img
+                        src="img/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
+                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"><img
+                        src="img/icon-linkedin.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
+                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="img/icon-email.png"
+                        loading="lazy" width="50" alt="" class="image-socials" /></a>
+                <a href="/files/Douglas_Santos_CV.pdf" class="link-social" target="_blank"><img src="img/icon-cv.png"
+                        loading="lazy" width="50" alt="" class="image-socials"></a>
             </div>
         </section>
-        <!-- Projects (3) -->
         <section class="projects-description-section" id="projects-section">
             <div class="container">
                 <div class="sub-header">Projects</div>
                 <h2>Some fun projects I have worked on over my years of college</h2>
                 <article class="article projects _2-col-grid">
                     <div class="project-container">
-                        <p class="title-project"> Restaurant Brazil</p>
-                        <a href="https://dacsantos.github.io/brazilrestaurant/" class="title-project" target="_blank">
-                            <img src="restaurant-00.jpg" class="img-project">
+                        <p class="title-project"> Restaurant Brazil </p>
+                        <a href="https://dacsantos.github.io/brazilrestaurant/" class="title-project " target="_blank">
+                            <img src="img/restaurant-00.jpg" class="img-project" alt="">
                         </a>
                     </div>
                     <p class="project-description">
-                        <span style="color: #60e7cc;">MY VERY FIRST FRONT-END PROJECT</span><br>
-                        A restaurant website
+                        <span style="color: #60e7cc;"> MY VERY FIRST FRONT-END PROJECT</span> <br> A restaurant website
                         with a login page implementing a user password validator,
                         a menu page to select the order and display the prices breakdown, separated by vegetarian and
                         non-vegetarian
@@ -144,24 +135,23 @@
                         showcase a
                         few skills. <br>
                         <a href="https://github.com/dacsantos/brazilrestaurant.git" class="link-project"
-                            target="_blank">
-                            <img src="icons/icon-github.png" loading="lazy" width="50" class="logo-project" />
-                            Check this code out!
-                        </a>
+                            target="_blank"><img src="img/icon-github.png" loading="lazy" width="50" alt=""
+                                class="logo-project" />Check this code out!</a>
                     </p>
                     <div class="project-container">
-                        <p class="title-project"> Mathematical Equations Calculator</p>
+                        <p class="title-project"> Mathematical Equations Calculator </p>
                         <div class="project-slideshow">
-                            <div class="images-group fade">
-                                <img src="equations-calc.jpg" id="main-photo">
+                            <div class="images-group fade ">
+                                <img id="main-photo" src="img/equations-calc.jpg">
                                 <div id="main-text" class="text">Login Page</div>
                             </div>
                             <div class="images-group fade">
-                                <img src="equations-calc00.jpg" id="calc">
-                                <div class="text">Calculator </div>
+                                <img src="img/equations-calc00.jpg" id="calc">
+                                <div class="text">Calculator</div>
                             </div>
+
                             <div class="images-group fade">
-                                <img src="equations-calc01.jpg">
+                                <img src="img/equations-calc01.jpg">
                                 <div class="text">History</div>
                             </div>
                             <a class="prev" onclick="plusImages(-1)">&#10094;</a>
@@ -171,7 +161,7 @@
                     <div>
                         <p class="project-description">
                             <span style="color: #60e7cc;"> A CALCULATOR FOR SYSTEMS OF LINEAR EQUATIONS</span> <br>
-                            A challenging yet rewarding project. Two login options: for the ADMIN and regular USERS;
+                            A challenging and rewarding project. Two login options: for the ADMIN and regular USERS;
                             Ability
                             to edit users information, and history of all calculations performed in the application. The
                             core
@@ -179,22 +169,21 @@
                             with two
                             options to choose from: multiplications of 2x2 or 3x3 matrices, provided by the users.
                             <br>
+
                             <a href="https://github.com/dacsantos/equationsCalculator.git" class="link-project"
-                                target="_blank">
-                                <img src="icons/icon-github.png" loading="lazy" width="50" class="logo-project" />
-                                Check this code out!
-                            </a>
+                                target="_blank"><img src="img/icon-github.png" loading="lazy" width="50" alt=""
+                                    class="logo-project" />Check this code out!</a>
                         </p>
                     </div>
                     <div class="project-container">
-                        <p class="title-project"> Concurrency Tasks</p>
+                        <p class="title-project"> Concurrency Tasks </p>
                         <a href="https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git"
                             class="title-project" target="_blank">
-                            <img src="concurrency-data-manipulation.jpg" class="img-project">
+                            <img src="img/concurrency-data-manipulation.jpg" class="img-project" alt="">
                         </a>
                     </div>
                     <div>
-                        <p class="project-description#">
+                        <p class="project-description">
                             <span style="color: #60e7cc;"> APPLICATION OF CONCURRENCY TO COMMON TASKS</span> <br>
                             A simple console application that imports a csv data set and deals with some operations such
                             as
@@ -203,16 +192,13 @@
                             algorithm to sort the data set. <br>
 
                             <a href="https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git"
-                                class="link-project" target="_blank">
-                                <img src="icons/icon-github.png" loading="lazy" class="logo-project">
-                                Check this code out!
-                            </a>
+                                class="link-project" target="_blank"><img src="img/icon-github.png" loading="lazy"
+                                    class="logo-project" />Check this code out!</a>
                         </p>
                     </div>
                 </article>
             </div>
         </section>
-        <!-- Contact (4) -->
         <section id="contact">
             <div class="container">
                 <div class="sub-header">Contact</div>
@@ -220,19 +206,21 @@
                 <div class="article">
                     <div>
                         <h3>Send me a message...</h3>
+
                         <form action="https://formsubmit.co/dacsantos@live.com" method="POST">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
                             <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
                             <input type="text" class="form-input" name="name" placeholder="Your name here" required>
-                            <input type="email" class="form-input" name="email" placeholder="Email address" required>
-                            <textarea type="text" name="message" id="msg-box" cols="50" rows="4"
+                            <input type="email" class="form-input" name="email" placeholder="Email Address" required>
+                            <textarea type="text" id="msg-box" rows="4" cols="50" name="message"
                                 placeholder="Enter your message here" required></textarea>
                             <button class="button" type="submit">Send Message</button>
                         </form>
                     </div>
+
                     <div class="img-contact-text">
-                        <img src="doug-why.png" class="img-contact">
+                        <img src="img/doug-why.png" class="img-contact">
                         <p class="about-text">...about interviews, project enquiries, or just to say 'Hi!' and how much
                             you
                             enjoyed this page. I promise to get back to you as soon as possible (in order of
@@ -256,7 +244,6 @@
         <p class="footer-text">Website designed by Douglas Santos</p>
         <p class="footer-text">Dublin - Ireland | 2023</p>
     </footer>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
-
 </html>
