--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         </a>
                     </div>
                     <div>
-                        <p class="project-description#">
+                        <p class="project-description">
                             <span style="color: #60e7cc;"> APPLICATION OF CONCURRENCY TO COMMON TASKS</span> <br>
                             A simple console application that imports a csv data set and deals with some operations such
                             as
