--- a/message_sent.html
+++ b/message_sent.html
@@ -11,12 +11,14 @@
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="http://127.0.0.1:5500/index.html" class="brand"><img src="img/ds-brand.png" loading="lazy"
-                        width="125" /></a>
+                <a href="http://127.0.0.1:5500/portfolioProject/index.html" class="brand"><img src="img/ds-brand.png"
+                        loading="lazy" width="125" /></a>
                 <nav role="navigation" class="nav-menu">
-                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">Education and skills</a>
-                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">projects</a>
-                    <a href="http://127.0.0.1:5500/index.html" class="nav-link">Contact</a>
+                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#education-section"
+                        class="nav-link">Education and skills</a>
+                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#projects-section"
+                        class="nav-link">projects</a>
+                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#contact" class="nav-link">Contact</a>
                 </nav>
             </div>
         </section>
@@ -35,12 +37,12 @@
             </div>
             <div class="side-menu">
                 <a href="https://github.com/dacsantos" class="link-social" target="_blank"><img
-                        src="img/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
+                        src="icons/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
                 <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"><img
-                        src="img/icon-linkedin.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="img/icon-email.png"
+                        src="icons/icon-linkedin.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
+                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="icons/icon-email.png"
                         loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="/files/Douglas_Santos_CV.pdf" class="link-social" target="_blank"><img src="img/icon-cv.png"
+                <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank"><img src="icons/icon-cv.png"
                         loading="lazy" width="50" alt="" class="image-socials"></a>
             </div>
         </section>
@@ -52,7 +54,6 @@
         <div class="lighting-middle"></div>
 
     </div>
-    <script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
